修改cluster接口、config接口api
